--- a/Example.html
+++ b/Example.html
@@ -4,7 +4,7 @@
 
 <h1>Mohammed AlRaffa 444101744</h1>
 
-
+<p>I'm taking Web development, OS and Mathematical Modeling. HTML is fun!</p>
 
 
 </body>
